data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1772.wast
;; 3. **Test Case 3**: Design a loop structure with an inner `if` block where a `br_if` targets the loop when the condition is barely met. Ensure stack polymorphism respects stack configurations.    - **Constraint Checked**: Handling of backward branch and operand stack state for loop inputs.    - **CFG Relation**: Misalignment in loop entry points or stack configurations causing invalid loop executions.

(assert_invalid
  (module
    (func $loop_if_br_if
      (loop (result i32)
        (i32.const 1)
        (if (result i32)
          (i32.const 1)
          (br_if 0 (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)